--- a/api/models/OffchainDBAdapterConfig.yaml
+++ b/api/models/OffchainDBAdapterConfig.yaml
@@ -1,10 +1,10 @@
 title: OffchainDBAdapterConfig
 type: object
 properties:
-  rest_uri:
+  RestURI:
     type: string
     description: URL
     format: uri
     example: 'http://blockchain-adapter:3333/documents'
 required:
-  - rest_uri
+  - RestURI
