add openssl handling to example

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "api:generate": "npm install @openapitools/openapi-generator-cli && openapi-generator generate -g typescript-node -i ../api/openapi.yaml -o ./build/openapi --additional-properties supportsES6=true,npmName=blockchain-adapter-api",
-    "api:build": "cd build/openapi && npm install --only=dev && npm run build",
+    "api:build": "cd build/openapi && npm install  && npm run build",
     "start": "node index",
     "build": "npm run api:generate && npm run api:build",
     "clean": "rm -rf node_modules && rm -rf build"
@@ -15,6 +15,8 @@
   "dependencies": {
     "@openapitools/openapi-generator-cli": "^1.0.18-4.3.1",
     "blockchain-adapter-api": "file:./build/openapi",
-    "btoa": "^1.2.1"
+    "btoa": "^1.2.1",
+    "openssl-nodejs": "^1.0.5",
+    "lodash": "4.17.20"
   }
 }
