--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@openapitools/openapi-generator-cli": "^1.0.18-4.3.1",
     "blockchain-adapter-api": "file:./build/openapi",
     "btoa": "^1.2.1",
+    "atob": "^2.1.2",
     "openssl-nodejs": "^1.0.5",
     "lodash": "4.17.20"
   }
