added discovery service

--- a/server/.openapi-generator-ignore
+++ b/server/.openapi-generator-ignore
@@ -3,6 +3,7 @@
 services/ContractService.js
 services/ConfigService.js
 services/StatusService.js
+services/DiscoveryService.js
 index.js
 hyperledger/*
 ccp/*
