--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,8 +1,18 @@
-// Use this file as a starting point for your project's .eslintrc.
-// Copy this file, and add rule overrides as needed.
 {
-  "extends": "airbnb",
-  "rules": {
-    "no-console": "off"
-  }
+  "env": {
+      "browser": true,
+      "es2021": true
+
+  },
+  "extends": [
+      "google"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+      "ecmaVersion": 2017,
+      "sourceType": "module"
+  },
+  "plugins": [
+      "@typescript-eslint"
+  ]
 }
