--- a/server/package.json
+++ b/server/package.json
@@ -21,20 +21,25 @@
     "express": "^4.16.4",
     "express-openapi-validator": "^3.9.1",
     "fabric-network": "^2.2.2",
+    "got": "^11.7.0",
     "js-yaml": "^3.3.0",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
     "swagger-ui-express": "^4.0.2",
+    "uuid": "^8.3.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint": "^7.9.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.17.2",
-    "mocha": "^7.1.1"
+    "mocha": "^7.1.1",
+    "typescript": "^4.0.3"
   },
   "eslintConfig": {
     "env": {
