--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "fabric-network": "^2.2.2",
     "got": "^11.7.0",
     "js-yaml": "^3.3.0",
+    "jsonfile": "^6.0.1",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
     "swagger-ui-express": "^4.0.2",
