--- a/api/models/PrivateDocumentAdded.yaml
+++ b/api/models/PrivateDocumentAdded.yaml
@@ -1,12 +1,12 @@
 title: PrivateDocumentAdded
 type: object
 properties:
-  documentID:
-    description: The documentID of the document that was added
+  referenceID:
+    description: The referenceID of the document that was added
     type: string
   txID:
     description: The hyperledger TX ID of the successfull add
     type: string
 required:
-  - documentID
+  - referenceID
   - txID
