add license info to make the repo reuse compliant

--- a/.github/workflows/build_and_publish_docker.yml
+++ b/.github/workflows/build_and_publish_docker.yml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2021 the BWRP-blockchain-adapter contributors.
+#
+# SPDX-License-Identifier: Apache-2.0
 name: build_docker
 
 on:
