--- a/server/tools/webhook_dummy_server/.gitignore
+++ b/server/tools/webhook_dummy_server/.gitignore
@@ -1,1 +1,5 @@
+// SPDX-FileCopyrightText: 2021 the BWRP-blockchain-adapter contributors.
+//
+// SPDX-License-Identifier: Apache-2.0
+//
 node-modules
