Add licensing information, make repo REUSE compliant (#43)
* cleanup old unused client code

* duplicate deleted

* cleaup tests, move to postman dir

* add license info

* add license info

* add license info to make the repo reuse compliant

* add CONTRIBUTING etc in docs

* fix linter errors of a previous commit

* set license header to GSMA as agreed on by mail

--- a/api/models/SubscriptionPayload.yaml
+++ b/api/models/SubscriptionPayload.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 GSMA and all contributors.
+#
+# SPDX-License-Identifier: Apache-2.0
+#
 title: SubscriptionPayload
 type: object
 properties:
