--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 GSMA and all contributors.
+#
+# SPDX-License-Identifier: Apache-2.0
+#
 FROM alpine:3.9
 
 COPY . /app
