--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "jsonfile": "^6.0.1",
     "ono": "^5.0.1",
     "openapi-sampler": "^1.0.0-beta.15",
+    "pkcs11js": "^1.2.6",
     "swagger-ui-express": "^4.0.2",
     "uuid": "^8.3.0",
     "winston": "^3.2.1"
