add license information

--- a/testing/config/ca.conf
+++ b/testing/config/ca.conf
@@ -1,5 +1,5 @@
+# Source: https://jamielinux.com/docs/openssl-certificate-authority/appendix/root-configuration-file.html
 # OpenSSL root CA configuration file.
-# Copy to `/root/ca/openssl.cnf`.
 
 [ ca ]
 # `man ca`
