test intermediate cert validation and revocation

--- a/testing/config/ca.conf
+++ b/testing/config/ca.conf
@@ -16,12 +16,12 @@ serial            = $dir/serial.txt
 RANDFILE          = $dir/.rand
 
 # The root key and root certificate.
-private_key       = $dir/root.DTAG.key
-certificate       = $dir/root.DTAG.pem
+private_key       = $dir/../ROLE.ORG.key
+certificate       = $dir/../ROLE.ORG.pem
 
 # For certificate revocation lists.
 crlnumber         = $dir/crlnumber
-crl               = $dir/root.crl.pem
+crl               = $dir/../ROLE.crl.pem
 crl_extensions    = crl_ext
 default_crl_days  = 30
 
