update license header of config file

--- a/testing/config/ca.conf
+++ b/testing/config/ca.conf
@@ -1,4 +1,7 @@
-# Source: https://jamielinux.com/docs/openssl-certificate-authority/appendix/root-configuration-file.html
+# SPDX-FileCopyrightText: 2015 Jamie Nguyen.
+#
+# SPDX-License-Identifier: Apache-2.0
+#
 # OpenSSL root CA configuration file.
 
 [ ca ]
